2012-12-05  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.h:
	* src/gstttmlevent.h:
	* src/gstttmlforward.h:
	* src/gstttmlspan.h:
	* src/gstttmlstate.h:
	  - Fix forward declaration of types for some strict compilers (like gcc
	    previous to version 4.6)

2012-11-30  Xavi Artigas  <xartigas@fluendo.com>

	* win32/vs10/libgstfluttml_sdk.vcxproj:
	  - Typo in project file

2012-11-30  Xavi Artigas  <xartigas@fluendo.com>

	* win32/vs10/libgstfluttml_sdk.vcxproj:
	* win32/vs10/libgstfluttml_sdk.vcxproj.filters:
	  - Add missing file to VS project to fix Windows build.

2012-11-30  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlutils.h:
	  - Missed file, as usual.

2012-11-30  Xavi Artigas  <xartigas@fluendo.com>

	* src/Makefile.am:
	* src/gstttmlattribute.c: (gst_ttml_parse_time_expression),
	(gst_ttml_attribute_parse), (gst_ttml_attribute_free),
	(gst_ttml_attribute_new_node),
	(gst_ttml_attribute_new_time_container),
	(gst_ttml_attribute_new_begin), (gst_ttml_attribute_new_dur):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlevent.c: (gst_ttml_event_free),
	(gst_ttml_event_compare), (gst_ttml_event_new_span_begin),
	(gst_ttml_event_new_span_end), (gst_ttml_event_list_insert),
	(gst_ttml_event_list_get_next), (gst_ttml_event_list_flush):
	* src/gstttmlevent.h:
	* src/gstttmlparse.c: (gst_ttmlparse_gen_buffer),
	(gst_ttmlparse_parse_event), (gst_ttmlparse_add_characters),
	(gst_ttmlparse_sax_element_start), (gst_ttmlparse_sax_element_end),
	(gst_ttmlparse_sax_characters), (gst_ttmlparse_sax_document_end),
	(gst_ttmlparse_chain), (gst_ttmlparse_cleanup),
	(gst_ttmlparse_init):
	* src/gstttmlparse.h:
	* src/gstttmlprivate.h:
	* src/gstttmlspan.c: (gst_ttml_span_compose), (gst_ttml_span_free),
	(gst_ttml_span_new), (gst_ttml_span_compare_id),
	(gst_ttml_span_list_add), (gst_ttml_span_list_remove):
	* src/gstttmlspan.h:
	* src/gstttmlstate.c: (gst_ttml_state_reset),