@@ -26,7 +26,8 @@ typedef enum _GstTTMLAttributeType {
   GST_TTML_ATTR_FRAME_RATE,
   GST_TTML_ATTR_FRAME_RATE_MULTIPLIER,
   GST_TTML_ATTR_WHITESPACE_PRESERVE,
-  GST_TTML_ATTR_SEQUENTIAL_TIME_CONTAINER
+  GST_TTML_ATTR_SEQUENTIAL_TIME_CONTAINER,
+  GST_TTML_ATTR_COLOR
 } GstTTMLAttributeType;
 
 /* Event types */
